fixed the breakpoint that was too small

--- a/style.css
+++ b/style.css
@@ -114,7 +114,7 @@ h1 {
 	color: hsl(228, 45%, 44%);
  }
 
-@media (min-width: 1240px) {
+@media (min-width: 1440px) {
 	body {
 		width: 100vw;
 		height: 100vh;
